--- a/client/package.json
+++ b/client/package.json
@@ -4,48 +4,9 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
-    "@material-ui/core": "^3.9.0",
-    "@material-ui/icons": "^3.0.2",
-    "@types/react": "^16.7.19",
-    "@types/react-dom": "^16.0.11",
-    "@types/react-router": "^4.4.3",
-    "@types/react-router-dom": "^4.3.1",
-    "jest-transform-stub": "^2.0.0",
-    "node-sass": "^4.11.0",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
-    "react-toastify": "^4.5.2",
-    "@babel/preset-env": "^7.3.1",
-    "@babel/preset-react": "^7.0.0",
-    "@types/jest": "^24.0.15",
-    "@types/react-redux": "^7.0.0",
-    "awesome-typescript-loader": "^5.2.1",
-    "babel-jest": "23.6.0",
-    "body-parser": "^1.19.0",
-    "enzyme": "^3.8.0",
-    "enzyme-adapter-react-16": "^1.8.0",
-    "enzyme-to-json": "^3.3.5",
-    "express": "^4.17.1",
-    "fetch-mock": "^7.3.0",
-    "jest": "^23.6.0",
-    "moxios": "^0.4.0",
-    "node-env-run": "^3.0.2",
-    "nodemon": "^1.19.1",
-    "npm-run-all": "^4.1.5",
-    "pino-colada": "^1.4.5",
-    "react-redux": "^6.0.0",
-    "react-test-renderer": "^16.7.0",
-    "redux": "^4.0.1",
-    "redux-mock-store": "^1.5.3",
-    "redux-thunk": "^2.3.0",
-    "source-map-loader": "^0.2.4",
-    "ts-jest": "^24.0.2",
-    "typescript": "^3.2.2",
-    "app-root-path": "^2.1.0",
-    "express-pino-logger": "^4.0.0"
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-scripts": "3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
